# kraken-ml-trading-strategy

./: .cursorrules  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CLOUD_FIRST_SETUP.md  ENDPOINT_INTEGRATION_SUMMARY.md  LICENSE  MODEL_CARD.md  MODEL_DEPLOYMENT_SUMMARY.md  Makefile  PROJECT_INDEX.md  README.md  REORGANIZATION_PLAN.md  SESSION_SUMMARY_GCP.md  app.py  app_cloud_integration.py  check_progress.py  conftest.py  deploy_endpoint_now.sh  enhance_mock_predictions.py  project-context.md  pyproject.toml  requirements.txt
.claude/hooks/: session-start.sh
.streamlit/: config.toml
archive/old_docs/: PROJECT_INDEX.md  ROOT_STRUCTURE.md
config/: __init__.py  config.yaml  gcp_config.yaml  portfolio.json  rebalancing_config.json
data/: stock_api.py
docs/: DOCUMENTATION_SUMMARY.md
docs/changelogs/: CHANGELOG_FIXES.md  SESSION_SUMMARY.md
docs/decisions/: 001-huber-loss-over-mse.md  002-walk-forward-over-kfold.md  003-mc-dropout-over-ensemble.md
docs/deployment/: GCP_ML_SETUP_GUIDE.md  PRODUCTION_STATUS.md
docs/technical/: ML_DEVELOPMENT.md  SYSTEM_FIXES_DOCUMENTATION.md  TECHNICAL_ARCHITECTURE.md  project-context.md
docs/user-guides/: QUICKSTART.md  TRAIN_ML_MODELS.md  UI_IMPROVEMENTS.md  USER_GUIDE.md
examples/training/: vertex_training_job.py
gcp/: README.md  __init__.py
gcp/deployment/: test_endpoint.py  vertex_prediction_service.py
gcp/scripts/: deploy_automl_training.sh  deploy_budget_endpoint.sh  deploy_budget_training.sh  deploy_final_training.sh  deploy_model_to_endpoint.py  deploy_quick_training.sh  deploy_simple_ml_training.py  deploy_simple_model.sh  deploy_simple_vertex_training.sh  deploy_vertex_training.sh  enable_apis.sh  setup_bigquery.sh  setup_budget_optimized.sh  setup_budget_optimized_safe.sh  setup_gcp_ml.sh  setup_iam.sh  setup_storage.sh  setup_workbench.sh
ml/: alpaca_trading.py  api.py  baseline_models.py  feature_engineering.py  historical_data_fetcher.py  hybrid_prediction_service.py  hyperparameter_tuning.py  lstm_model.py  lstm_model_gpu.py  portfolio_rebalancer.py  prediction_service.py  prediction_service.py.backup  statistical_tests.py
notebooks/: model_evaluation.ipynb
quantconnect/: CryptoMLStrategy.py  README.md
ui/: __init__.py  components.py  styles.py
(+39 files in other folders)
